# dme-python-sdk

./: .README.md.swp  .env  .gitignore  CLAUDE.md  README.md  REASONIX.md  TEST_SUMMARY.md  install.sh  pyproject.toml
.reasonix/: CLAUDE.md
.reasonix/output/: dme-api-table.md  findings-param-keys.md  nas-full-test-report.md  nas-test-report.md
.reasonix/plans/: 000-plan-translate-cn-to-en.md  000-sync-dev-en-to-main-en.md  000-sync-dev-to-main.md  000-sync-main-to-dev-en.md  001-generate-traverse-api-script.md  001-plan-update-cn-to-en.md  100.rewrite-action-funcs-to-follow-api-ref.md  101-gen-actions-for-not-impl-apis.md  102-update-actions-docstring.md  102-update-actions-returns-docstring.md  300-add-action-risk-blacklist.md  500-test-all-actions.md  501-env-todo.md  plan-fix-param-keys.md  plan-qa-translation.md  plan-verify-param-keys.md
.reasonix/scripts/: 00-env.sh  00-lib.sh  02-storage-ids.sh  05-protect-ids.sh  06-fcswitch-ids.sh  check_b_docstring_vs_sig.py  check_c_payload_keys.py  check_d_registry_vs_sig.py  check_e_format_block_keys.py  check_f_suspicious_ids.py  check_prose.py  cleanup_final.py  compare_params.py  extract_old_returns.py  extract_returns_diff.py  read_api_reference.py  translate_readme.py
.reasonix/truncated-results/: 1781701809478-5fc03598-filesystem_read_text_file.txt  1781702063364-85d05065-run_command.txt  1781702429478-310adb03-filesystem_read_text_file.txt  (+13 more)
notebook/: storage.ipynb
pydme/: __init__.py  cli.py  client.py
reference/: dme-api-reference.md  dme-api-stormgmt.md
utils/: traverse_api_reference.py
(+87 files in other folders)
