[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pydme"
version = "0.1.0"
description = "DME python SDK for storage management"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "requests>=2.28",
]

[tool.setuptools.packages.find]
include = ["pydme*"]
