[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydme"
version = "25.0.0"
description = "DME python SDK for storage management"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "requests>=2.28",
]

[project.scripts]
pydme = "pydme.cli:main"

[tool.setuptools.packages.find]
include = ["pydme*"]
